added more exercises for present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -70,6 +70,111 @@
                 </p>
             </section>
 
+            <section>
+                <h4> Conjuguez les verbes au subjonctif présent.</h4>
+
+                <ol>
+                    <li>
+                        <b title="partent">partir</b> – Qu’ils
+                        <input type="text" pattern="partent"> !
+                    </li>
+                    <li>
+                        <b title="se taise">se taire</b> – Qu’elle
+                        <input type="text" pattern="se taise"> !
+                    </li>
+                    <li>
+                        <b title="mette">mettre</b> – Qu’elle
+                        <input type="text" pattern="mette">
+                        un chandail !
+                    </li>
+                    <li>
+                        <b title="exclue">exclure</b> – Qu’on l’
+                        <input type="text" pattern="exclue">
+                        de l’activité !
+                    </li>
+                    <li>
+                        <b title="disparaisse">disparaître</b> – Qu’il
+                        <input type="text" pattern="disparaisse">
+                        de ma vue !
+                    </li>
+                    <li>
+                        <b title="boivent">Boire</b> – Qu’ils
+                        <input type="text" pattern="boivent">
+                        un whisky !
+                    </li>
+                    <li>
+                        <b title="sorte">Sortir</b> – Qu’elle
+                        <input type="text" pattern="sorte">
+                        d’ici !
+                    </li>
+                    <li>
+                        <b title="rentre">Rentrer</b> – Qu’il
+                        <input type="text" pattern="rentre">
+                        chez lui !
+                    </li>
+                    <li>
+                        <b title="suive">Suivre</b> – Qu’elle
+                        <input type="text" pattern="suive">
+                        les consignes !
+                    </li>
+                    <li>
+                        <b title="mangent">Manger</b> – Qu’ils
+                        <input type="text" pattern="mangent">
+                        cette soupe !
+                    </li>
+                </ol>
+            </section>
+
+            <section class="span-half">
+                <h4>Transformez les phrases selon le modèle.</h4>
+
+                <div>
+                    <span>
+                        Je lui reparlerai si elle s’excuse.
+                        <span class="whitespace"></span>
+                        --->
+                    </span>
+                    <span>Je lui reparlerai <i class="red">à la condition</i> qu’elle s’excuse.</span>
+                </div>
+
+                <ol>
+                    <li>
+                        <span title="Elles seront à la soirée à la condition qu'on leur permette d'entrer.">
+                            Elles seront à la soirée si on leur permet d’entrer.
+                        </span>
+                        <span><input type="text"
+                                pattern="Elles seront à la soirée à la condition qu'on leur permette d'entrer[.]?"></span>
+                    </li>
+                    <li>
+                        <span title="Ils nous visiteront à la condition que nous ne soyons pas  partis en Europe.">
+                            Ils nous visiteront si nous ne sommes pas partis en Europe.
+                        </span>
+                        <span><input type="text"
+                                pattern="Ils nous visiteront à la condition que nous ne soyons pas  partis en Europe[.]?"></span>
+                    </li>
+                    <li>
+                        <span title="Il réussira à garder son emploi à condition qu'il travaille davantage.">
+                            Il réussira à garder son emploi s’il travaille davantage.
+                        </span>
+                        <span><input type="text"
+                                pattern="Il réussira à garder son emploi à condition qu'il travaille davantage[.]?"></span>
+                    </li>
+                    <li>
+                        <span title="Je discuterai avec toi à la condition que tu restes calme.">
+                            Je discuterai avec toi si tu restes calme.
+                        </span>
+                        <span><input type="text"
+                                pattern="Je discuterai avec toi à la condition que tu restes calme[.]?"></span>
+                    </li>
+                    <li>
+                        <span title="Nous lui pardonnerons à la condition qu'elle promette de dire la vérité.">
+                            Nous lui pardonnerons si elle promet de dire la vérité.
+                        </span>
+                        <span><input type="text"
+                                pattern="Nous lui pardonnerons à la condition qu'elle promette de dire la vérité[.]?"></span>
+                    </li>
+                </ol>
+            </section>
 
             <iframe src="partials/errorCounter.html"
                 onload="this.before(...(this.contentWindow.document.body||this.contentWindow.document).children);this.remove()"></iframe>
