added text exercise for future perfect

--- a/french/index.html
+++ b/french/index.html
@@ -93,6 +93,14 @@
     <a href="pages/exercise_conditionalperfect.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">B2</span>
+    <header>Le futur antérieur</header>
+    <a href="pdf/futureperfect.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20futur%20antérieur">exercice de liste de verbes</a>
+    <a href="pages/exercise_futureperfect.html">exercice de texte</a>
+  </div>
+
   <h3>
     <a class="wide" href="pages/conjugations.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
   </h3>
