--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -101,8 +101,8 @@
                         <th><a href="exercise_conditionalperfect.html">texte</a></th>
 
                         <!-- futur antérieur -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?Le%20futur%20antérieur">liste</a></th>
+                        <th><a href="exercise_futureperfect.html">texte</a></th>
 
                         <!-- concordance -->
                         <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
@@ -150,8 +150,8 @@
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td class="exercise_conditionalperfect.html"></td>
 
-                            <td class=""></td>
-                            <td class=""></td>
+                            <td class="conjugations.html?Le%20futur%20antérieur"></td>
+                            <td class="exercise_futureperfect.html"></td>
 
                             <td class="exercise_concordance.html"></td>
                             <td class="exercise_concordance3.html"></td>
