added verb list for future perfect

--- a/french/pages/conjugations.html
+++ b/french/pages/conjugations.html
@@ -86,6 +86,10 @@
                         conditionnel passé
                     </label>
                     <label>
+                        <input type="checkbox" class="verb-tense-checkbox" name="futureperfect" checked="checked">Le
+                        futur antérieur
+                    </label>
+                    <label>
                         <input type="checkbox" class="verb-tense-checkbox" name="imperative"
                             checked="checked">L'impératif
                     </label>
