--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -150,7 +150,7 @@
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td class="exercise_conditionalperfect.html"></td>
 
-                            <td class="conjugations.html?Le%20futur%20antérieur"></td>
+                            <td class="conjugations.html?Le%20futur%20ant%C3%A9rieur"></td>
                             <td class="exercise_futureperfect.html"></td>
 
                             <td class="exercise_concordance.html"></td>
