--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -31,7 +31,7 @@
                         <th colspan="6">A2</th>
                         <th colspan="7">B1</th>
                         <th colspan="4">B2</th>
-                        <th colspan="3"></th>
+                        <th colspan="4"></th>
                     </tr>
                     <tr>
                         <th rowspan="2">date</th>
@@ -54,7 +54,7 @@
                         <th colspan="2">conditionnel passé</th>
                         <th colspan="2">futur antérieur</th>
 
-                        <th colspan="3">concordance des temps</th>
+                        <th colspan="4">concordance des temps</th>
                     </tr>
                     <tr>
                         <!-- A1 -->
@@ -108,8 +108,11 @@
                         <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
                         <th><a href="exercise_concordance3.html"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</a></th>
-                        <th><a href="exercise_concordance_conditional.html" title="Les phrases de condition">si...</a>
+                        <th>
+                            <a href="exercise_concordance_conditional.html" title="Les phrases de condition">si...</a>
                         </th>
+                        <th><a href="exercise_concordance_future.html"
+                                title="futur simple - futur antérieur">f.s.-f.a.</a></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -156,6 +159,7 @@
                             <td class="exercise_concordance.html"></td>
                             <td class="exercise_concordance3.html"></td>
                             <td class="exercise_concordance_conditional.html"></td>
+                            <td class="exercise_concordance_future.html"></td>
                         </tr>
                     </template>
                 </tbody>
