fixed showing present subjunctive in stats

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -89,7 +89,7 @@
                         <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
                         <!-- subjonctif présent -->
-                        <th><a href="conjugations.html?Le%20subjonctif%20présent">liste</a></th>
+                        <th><a href="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">liste</a></th>
                         <th><a href="exercise_presentsubjunctive.html">texte</a></th>
 
                         <!-- passif -->
@@ -144,7 +144,7 @@
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
 
-                            <td class="conjugations.html?Le%20subjonctif%20présent"></td>
+                            <td class="conjugations.html?Le%20subjonctif%20pr%C3%A9sent"></td>
                             <td class="exercise_presentsubjunctive.html"></td>
 
                             <td class="exercise_passive.html"></td>
