stats page shows if exercise was already done at earlier date

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -118,48 +118,48 @@
                 <tbody>
                     <template id="template-table-row">
                         <tr>
-                            <td class="date"></td>
+                            <td data-key="date"></td>
 
                             <!-- A1 -->
-                            <td class="conjugations.html?Le%20pr%C3%A9sent"></td>
-                            <td class="exercise_present.html"></td>
+                            <td data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
+                            <td data-key="exercise_present.html"></td>
 
-                            <td class="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
-                            <td class="exercise_presentperfect.html"></td>
+                            <td data-key="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
+                            <td data-key="exercise_presentperfect.html"></td>
 
                             <!-- A2 -->
-                            <td class="conjugations.html?L%27imparfait"></td>
-                            <td class="exercise_imperfect.html"></td>
+                            <td data-key="conjugations.html?L%27imparfait"></td>
+                            <td data-key="exercise_imperfect.html"></td>
 
-                            <td class="conjugations.html?Le%20futur%20simple"></td>
-                            <td class="exercise_future.html"></td>
+                            <td data-key="conjugations.html?Le%20futur%20simple"></td>
+                            <td data-key="exercise_future.html"></td>
 
-                            <td class="conjugations.html?L%27imp%C3%A9ratif"></td>
-                            <td class="exercise_imperative.html"></td>
+                            <td data-key="conjugations.html?L%27imp%C3%A9ratif"></td>
+                            <td data-key="exercise_imperative.html"></td>
 
                             <!-- B1 -->
-                            <td class="conjugations.html?Le%20plus-que-parfait"></td>
-                            <td class="exercise_pastperfect.html"></td>
+                            <td data-key="conjugations.html?Le%20plus-que-parfait"></td>
+                            <td data-key="exercise_pastperfect.html"></td>
 
-                            <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
-                            <td class="exercise_conditionalpresent.html"></td>
+                            <td data-key="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
+                            <td data-key="exercise_conditionalpresent.html"></td>
 
-                            <td class="conjugations.html?Le%20subjonctif%20pr%C3%A9sent"></td>
-                            <td class="exercise_presentsubjunctive.html"></td>
+                            <td data-key="conjugations.html?Le%20subjonctif%20pr%C3%A9sent"></td>
+                            <td data-key="exercise_presentsubjunctive.html"></td>
 
-                            <td class="exercise_passive.html"></td>
+                            <td data-key="exercise_passive.html"></td>
 
                             <!-- B2 -->
-                            <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
-                            <td class="exercise_conditionalperfect.html"></td>
+                            <td data-key="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
+                            <td data-key="exercise_conditionalperfect.html"></td>
 
-                            <td class="conjugations.html?Le%20futur%20ant%C3%A9rieur"></td>
-                            <td class="exercise_futureperfect.html"></td>
+                            <td data-key="conjugations.html?Le%20futur%20ant%C3%A9rieur"></td>
+                            <td data-key="exercise_futureperfect.html"></td>
 
-                            <td class="exercise_concordance.html"></td>
-                            <td class="exercise_concordance3.html"></td>
-                            <td class="exercise_concordance_conditional.html"></td>
-                            <td class="exercise_concordance_future.html"></td>
+                            <td data-key="exercise_concordance.html"></td>
+                            <td data-key="exercise_concordance3.html"></td>
+                            <td data-key="exercise_concordance_conditional.html"></td>
+                            <td data-key="exercise_concordance_future.html"></td>
                         </tr>
                     </template>
                 </tbody>
