added concordance of future tenses

--- a/french/index.html
+++ b/french/index.html
@@ -135,6 +135,12 @@
     <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">B2</span>
+    <header>La concordance au futur</header>
+    <a href="pdf/concordance_future.pdf">théorie</a>
+    <a href="pages/exercise_concordance_future.html">exercice de texte</a>
+  </div>
   <hr />
 
   <h3>
