completed concordance of future verbs

--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -26,6 +26,110 @@
         <article class="text">
             <h2>La concordance au futur</h2>
 
+            <section class="span-third">
+                <h4>Conjuguer ces verbes au futur simple et au futur antérieur.</h4>
+
+                <div>
+                    <span>
+                        <span class="whitespace-mini"></span>
+                    </span>
+                    <span>Futur simple</span>
+                    <span>Futur antérieur</span>
+                </div>
+
+                <ol>
+                    <li>
+                        <span><b title="pourras - auras pu">pouvoir</b> : tu</span>
+                        <span><input type="text" pattern="pourras"></span>
+                        <span><input type="text" pattern="auras pu"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="naîtra - sera né">naître</b> : il</span>
+                        <span><input type="text" pattern="naîtra"></span>
+                        <span><input type="text" pattern="sera né"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="recevrons - aurons reçu">recevoir</b> : nous</span>
+                        <span><input type="text" pattern="recevrons"></span>
+                        <span><input type="text" pattern="aurons reçu"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="se promèneront - se seront promenées">se promener</b> : elles</span>
+                        <span><input type="text" pattern="se promèneront"></span>
+                        <span><input type="text" pattern="se seront promenées"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="regarderai - aurai regardé">regarder</b> : je</span>
+                        <span><input type="text" pattern="regarderai"></span>
+                        <span><input type="text" pattern="aurai regardé"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="croirez - aurez cru">croire</b> : vous</span>
+                        <span><input type="text" pattern="croirez"></span>
+                        <span><input type="text" pattern="aurez cru"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="dira - aura dit">dire</b> : il</span>
+                        <span><input type="text" pattern="dira"></span>
+                        <span><input type="text" pattern="aura dit"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="contourneras - auras contourné">contourner</b> : tu</span>
+                        <span><input type="text" pattern="contourneras"></span>
+                        <span><input type="text" pattern="auras contourné"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="devrons - aurons dû">devoir</b> : nous</span>
+                        <span><input type="text" pattern="devrons"></span>
+                        <span><input type="text" pattern="aurons dû"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="se donnera - se sera donné">se donner</b> : elle</span>
+                        <span><input type="text" pattern="se donnera"></span>
+                        <span><input type="text" pattern="se sera donné"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="parlerez - aurez parlé">parler</b> : vous</span>
+                        <span><input type="text" pattern="parlerez"></span>
+                        <span><input type="text" pattern="aurez parlé"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="jetterai - aurai jeté">jeter</b> : je</span>
+                        <span><input type="text" pattern="jetterai"></span>
+                        <span><input type="text" pattern="aurai jeté"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="conduiras - auras conduit">conduire</b> : tu</span>
+                        <span><input type="text" pattern="conduiras"></span>
+                        <span><input type="text" pattern="auras conduit"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="réussiront - auront réussi">réussir</b> : elles</span>
+                        <span><input type="text" pattern="réussiront"></span>
+                        <span><input type="text" pattern="auront réussi"></span>
+                    </li>
+
+                    <li>
+                        <span><b title="prendra - aura pris">prendre</b> : il</span>
+                        <span><input type="text" pattern="prendra"></span>
+                        <span><input type="text" pattern="aura pris"></span>
+                    </li>
+                </ol>
+            </section>
+
             <section>
                 <h4>Conjuguez les verbes suivants au futur antérieur.</h4>
 
