fine-tuned present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -53,12 +53,12 @@
                     Il serait bon que tu (<b title="attendes">attendre</b>)
                     <input type="text" pattern="attendes">
                     le facteur pour que les voisins (<b title="ne se plaignent pas">ne pas se plaindre</b>)
-                    <input type="text" pattern="ne se plaignent pas">.
+                    <input type="text" class="wide" pattern="ne se plaignent pas"> .
 
                     Chaque matin, il faudra que tu (<b title="ailles">aller</b>)
                     <input type="text" pattern="ailles">
                     à l’épicerie et que tu (<b title="te souviennes">se souvenir</b>)
-                    <input type="text" pattern="te souviennes">
+                    <input type="text" class="wide" pattern="te souviennes">
                     d’apporter la clé.
 
                     Il est peu probable que tu (<b title="doives">devoir</b>)
@@ -151,7 +151,7 @@
                             Ils nous visiteront si nous ne sommes pas partis en Europe.
                         </span>
                         <span><input type="text"
-                                pattern="Ils nous visiteront à la condition que nous ne soyons pas  partis en Europe[.]?"></span>
+                                pattern="Ils nous visiteront à la condition que nous ne soyons pas partis en Europe[.]?"></span>
                     </li>
                     <li>
                         <span title="Il réussira à garder son emploi à condition qu'il travaille davantage.">
