fine-tuned present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -154,11 +154,11 @@
                                 pattern="Ils nous visiteront à la condition que nous ne soyons pas partis en Europe[.]?"></span>
                     </li>
                     <li>
-                        <span title="Il réussira à garder son emploi à condition qu'il travaille davantage.">
+                        <span title="Il réussira à garder son emploi à la condition qu'il travaille davantage.">
                             Il réussira à garder son emploi s’il travaille davantage.
                         </span>
                         <span><input type="text"
-                                pattern="Il réussira à garder son emploi à condition qu'il travaille davantage[.]?"></span>
+                                pattern="Il réussira à garder son emploi à la condition qu'il travaille davantage[.]?"></span>
                     </li>
                     <li>
                         <span title="Je discuterai avec toi à la condition que tu restes calme.">
